javascript/ql/test/query-tests/NodeJS/InvalidExport/tst3.js
// NOT OK: useless assignment
exports = module.exports = { a: 23 };
